// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot 1: 4-team 8-round state hash matrix > produces a deterministic hash matrix that matches the stored snapshot 1`] = `
{
  "team-1": [
    "be14eb8a",
    "8713ab6b",
    "36db93f4",
    "91ac2556",
    "ebf9f356",
    "c8cceb5e",
    "f43c73cb",
    "d99519f8",
  ],
  "team-2": [
    "e86cdb6f",
    "83559765",
    "bb01673a",
    "ae4203d8",
    "c7f3d7b6",
    "f6a1aed7",
    "e83d2d66",
    "a1596375",
  ],
  "team-3": [
    "e86cdb6f",
    "83559765",
    "bb01673a",
    "ae4203d8",
    "c7f3d7b6",
    "f6a1aed7",
    "e83d2d66",
    "a1596375",
  ],
  "team-4": [
    "e86cdb6f",
    "83559765",
    "bb01673a",
    "ae4203d8",
    "c7f3d7b6",
    "f6a1aed7",
    "e83d2d66",
    "a1596375",
  ],
}
`;

exports[`Snapshot 2: Market demand progression (2 teams) > produces deterministic demand history that matches the stored snapshot 1`] = `
[
  {
    "Active Lifestyle": 262500,
    "Budget": 808000,
    "Enthusiast": 124800,
    "General": 510000,
    "Professional": 60600,
    "round": 1,
  },
  {
    "Active Lifestyle": 275625,
    "Budget": 816080,
    "Enthusiast": 129792,
    "General": 520200,
    "Professional": 61206,
    "round": 2,
  },
  {
    "Active Lifestyle": 289406.25,
    "Budget": 824240.8,
    "Enthusiast": 134983.68,
    "General": 530604,
    "Professional": 61818.06,
    "round": 3,
  },
  {
    "Active Lifestyle": 303876.5625,
    "Budget": 832483.2080000001,
    "Enthusiast": 140383.0272,
    "General": 541216.08,
    "Professional": 62436.2406,
    "round": 4,
  },
  {
    "Active Lifestyle": 319070.390625,
    "Budget": 840808.0400800001,
    "Enthusiast": 145998.348288,
    "General": 552040.4016,
    "Professional": 63060.603006,
    "round": 5,
  },
]
`;

exports[`Snapshot 3: Determinism — identical runs produce identical hashes > two runs with same seed yield identical per-round per-team hashes 1`] = `
[
  [
    "be14eb8a",
    "e86cdb6f",
    "e86cdb6f",
    "e86cdb6f",
  ],
  [
    "8713ab6b",
    "83559765",
    "83559765",
    "83559765",
  ],
  [
    "36db93f4",
    "bb01673a",
    "bb01673a",
    "bb01673a",
  ],
  [
    "91ac2556",
    "ae4203d8",
    "ae4203d8",
    "ae4203d8",
  ],
  [
    "ebf9f356",
    "c7f3d7b6",
    "c7f3d7b6",
    "c7f3d7b6",
  ],
  [
    "c8cceb5e",
    "f6a1aed7",
    "f6a1aed7",
    "f6a1aed7",
  ],
  [
    "f43c73cb",
    "e83d2d66",
    "e83d2d66",
    "e83d2d66",
  ],
  [
    "d99519f8",
    "a1596375",
    "a1596375",
    "a1596375",
  ],
]
`;
